add upgrade files